<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory 
		android:title="@string/str_prefcat_aws"
		android:key="aws_catag">
		<EditTextPreference 
			android:numeric="integer" 
			android:title="@string/str_aws_pref_edit_tpwr"
			android:key="tx_power" 
			android:dialogMessage="@string/str_aws_pref_edit_dlg_tpwr" 
			android:maxLength="2"/>
		<ListPreference 
			android:title="@string/str_aws_pref_list_datart"
			android:key="data_rate"/>
   		<EditTextPreference			 
			android:numeric="integer" 
			android:title="@string/str_aws_pref_edit_fragtr"
			android:key="fragm_threshold" 
			android:dialogMessage="@string/str_aws_pref_edit_dlg_fragtr" 
			android:maxLength="4"
			android:defaultValue="2346"/>
 		 <EditTextPreference			 
			android:title="@string/str_aws_pref_edit_rtstr"
			android:numeric="integer"
			android:key="rts_threshold" 
			android:dialogMessage="@string/str_aws_pref_edit_dlg_rtstr" 
			android:maxLength="4"
			android:defaultValue="2347"/>
 		<EditTextPreference		 
			android:title="@string/str_aws_pref_edit_becon"
			android:numeric="integer" 
			android:key="beacon_int"
			android:dialogMessage="@string/str_aws_pref_edit_dlg_becon" 
			android:maxLength="5"
			android:defaultValue="100"/>
		<EditTextPreference		 
			android:title="@string/str_aws_pref_edit_dtim" 
			android:numeric="integer"
			android:key="dtim_period" 
			android:dialogMessage="@string/str_aws_pref_edit_dlg_dtim" 
			android:maxLength="3"
			android:defaultValue="1"/>
		<CheckBoxPreference 
			android:summaryOn="Enabled"
			android:summaryOff="Disabled" 
			android:key="protect_flag"
			android:title="@string/str_bws_pref_check_pf" 
			android:defaultValue="false"/>			
		<ListPreference 
			android:title="@string/str_aws_pref_list_wmm"
			android:key="wmm_enabled"
			android:entries="@array/wmmArray" 
			android:entryValues="@array/wmmValues"/>			
	    <CheckBoxPreference 
			android:summaryOn="Enabled"
			android:summaryOff="Disabled" 
			android:key="intra_bss"
			android:title="@string/str_bws_pref_check_intrbss" 
			android:defaultValue="false"/>
		<CheckBoxPreference 
			android:summaryOn="Enabled"
			android:summaryOff="Disabled" 
			android:key="d_chk"
			android:title="@string/str_bws_pref_check_d" 
			android:defaultValue="false"/>		
		<ListPreference 
			android:title="@string/str_aws_pref_list_ctry"
			android:key="country_code" 
			android:entries="@array/countryCodeArray" 
			android:entryValues="@array/countryCodeValues" 
			android:dependency="d_chk"/>
		<ListPreference 
			android:title="@string/str_aws_pref_list_apshuttimer"
			android:key="auto_shut_off_time" 
			android:entries="@array/ApShutdownTimerArray" 
			android:entryValues="@array/ApShutdownTimerValues" />		
		<ListPreference android:title="@string/str_aws_pref_edit_energy"
			android:key="energy_detect_threshold" 
			android:entries="@array/energyDetectThreshold" 
			android:entryValues="@array/energyDetectThresholdValues" 			
			android:defaultValue="7"/>					
	</PreferenceCategory>
</PreferenceScreen>